[package]
name = "cuda-prompt"
version = "0.1.0"
edition = "2021"
description = "Template rendering, CoT scaffolding, version scoring, compression"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Lucineer/cuda-prompt"
readme = "README.md"
keywords = ["ai", "fleet", "agent", "rust"]
categories = ["science"]

[dependencies]
serde = { version = "1", features = ["derive"] }
